sms-module build up

--- a/packages/esm-sms-app/translations/en.json
+++ b/packages/esm-sms-app/translations/en.json
@@ -1,4 +1,5 @@
 {
+  "addProviderConfigFormWorkspaceTitle": "Add Provider",
   "smsConfiguration": "SMS Configuration",
   "smsProviderSettings": "SMS Provider Settings"
 }
