--- a/packages/esm-sms-app/translations/en.json
+++ b/packages/esm-sms-app/translations/en.json
@@ -1,5 +1,66 @@
 {
-  "addProviderConfigFormWorkspaceTitle": "Add Provider",
+  "add": "Add",
+  "addProvider": "Add Provider",
+  "advanced": "Advanced",
+  "automaticResponseScript": "Automatic response script (Optional)",
+  "cancel": "Cancel",
+  "chooseTemplate": "Choose a template",
+  "configDetails": "Configuration details",
+  "configNotSaved": "Configuration not saved",
+  "configRemoved": "Configuration removed",
+  "configSaved": "Configuration saved",
+  "configuration": "Configuration",
+  "configurations": "Configurations",
+  "deleteModalConfirmationText": "Are you sure you want to delete this configuration?",
+  "discard": "Discard",
+  "edit": "Edit",
+  "editConfig": "Edit provider configuration",
+  "enterAutomaticScript": "Enter your script",
+  "errorDeletingConfig": "Error deleting configuration",
+  "errorMakingDefault": "Failed to update default config",
+  "excludeLastFooter": "Exclude footer from last split message",
+  "fileContent": "File Content",
+  "fileName": "File name",
+  "fileSizeInstructions": "Drag and drop files here or click to upload",
+  "fileSizeLimitExceeded": "exceeds the size limit of",
+  "fileSizeLimitExceededText": "File size limit exceeded",
+  "fileUploadSizeConstraints": "Size limit is {{fileSize}}MB",
+  "fitlerLogsByNumber": "Fitler logs by phone number",
+  "footerSplitMessage": "Footer split message",
+  "footerSplitText": "Footers split text",
+  "headerSplitMessage": "Header split message",
+  "headerSplitText": "Header split text",
+  "importConfig": "Import config template",
+  "logs": "Logs",
+  "maximumRetries": "Maximum retries",
+  "maxRetries": "Maximum retries",
+  "nameOfProvider": "Name of the provider",
+  "namePlaceHolder": "Enter provider name e.g Twilio",
+  "noConfigurationsToDisplay": "No configurations to display",
+  "noSmsLogsToDisplay": "No SMS Logs to display",
+  "numberOfRetries": "Number of retries",
+  "providerName": "Provider name",
+  "providers": "Providers",
+  "remove": "Remove",
+  "removeConfiguration": "Remove configuration",
+  "removing": "Removing",
+  "saveAndClose": "Save and close",
+  "selectTemplate": "Select a template",
+  "sending": "Sending",
+  "setDefault": "Set as default",
   "smsConfiguration": "SMS Configuration",
-  "smsProviderSettings": "SMS Provider Settings"
+  "smsLogs": "SMS Logs",
+  "smsProviderSettings": "SMS Provider Settings",
+  "splitFooter": "Footer split text",
+  "splitHeader": "Header split text",
+  "successMakingDefault": "Default config updated",
+  "tabletOverlay": "Tablet overlay",
+  "template": "Template",
+  "templateName": "Template name",
+  "test": "Test",
+  "Test": "Test",
+  "uploadConfig": "Upload config",
+  "uploadNotSuccess": "Upload unsuccessful",
+  "uploadSuccess": "Upload successful",
+  "writeYourScript": "Write your script"
 }
