--- a/packages/esm-sms-app/translations/en.json
+++ b/packages/esm-sms-app/translations/en.json
@@ -16,6 +16,7 @@
   "discard": "Discard",
   "edit": "Edit",
   "editConfig": "Edit provider configuration",
+  "emptyTableStateText": "There are no {{displayText}} to display",
   "enterAutomaticScript": "Enter your script",
   "errorDeletingConfig": "Error deleting configuration",
   "errorMakingDefault": "Failed to update default config",
@@ -42,6 +43,7 @@
   "numberOfRetries": "Number of retries",
   "providerName": "Provider name",
   "providers": "Providers",
+  "record": "Record",
   "remove": "Remove",
   "removeConfiguration": "Remove configuration",
   "removing": "Removing",
