--- a/packages/esm-sms-app/translations/en.json
+++ b/packages/esm-sms-app/translations/en.json
@@ -5,14 +5,18 @@
   "automaticResponseScript": "Automatic response script (Optional)",
   "cancel": "Cancel",
   "chooseTemplate": "Choose a template",
+  "config": "Configuration",
   "configDetails": "Configuration details",
   "configNotSaved": "Configuration not saved",
   "configRemoved": "Configuration removed",
   "configSaved": "Configuration saved",
   "configuration": "Configuration",
   "configurations": "Configurations",
+  "creationDate": "Creation date",
+  "creator": "Creator",
   "default": "Default",
   "deleteModalConfirmationText": "Are you sure you want to delete this configuration?",
+  "deliveryStatus": "Delivery status",
   "discard": "Discard",
   "edit": "Edit",
   "editConfig": "Edit provider configuration",
@@ -20,6 +24,7 @@
   "enterAutomaticScript": "Enter your script",
   "errorDeletingConfig": "Error deleting configuration",
   "errorMakingDefault": "Failed to update default config",
+  "errorMessage": "Error message",
   "excludeLastFooter": "Exclude footer from last split message",
   "fileContent": "File Content",
   "fileName": "File name",
@@ -36,13 +41,20 @@
   "logs": "Logs",
   "maximumRetries": "Maximum retries",
   "maxRetries": "Maximum retries",
+  "messageContent": "Message",
+  "modificationDate": "Modification date",
+  "modifiedBy": "Modified by",
   "nameOfProvider": "Name of the provider",
   "namePlaceHolder": "Enter provider name e.g Twilio",
   "noConfigurationsToDisplay": "No configurations to display",
   "noSmsLogsToDisplay": "No SMS Logs to display",
   "numberOfRetries": "Number of retries",
+  "openMrsId": "Openmrs ID",
+  "phoneNumber": "Phone number",
+  "providerId": "Provider",
   "providerName": "Provider name",
   "providers": "Providers",
+  "providerStatus": "Provider status",
   "record": "Record",
   "remove": "Remove",
   "removeConfiguration": "Remove configuration",
@@ -52,6 +64,7 @@
   "sending": "Sending",
   "setDefault": "Set as default",
   "smsConfiguration": "SMS Configuration",
+  "smsDirection": "SMS direction",
   "smsLogs": "SMS Logs",
   "smsProviderSettings": "SMS Provider Settings",
   "splitFooter": "Footer split text",
@@ -62,6 +75,7 @@
   "templateName": "Template name",
   "test": "Test",
   "Test": "Test",
+  "timestamp": "Timestamp",
   "uploadConfig": "Upload config",
   "uploadNotSuccess": "Upload unsuccessful",
   "uploadSuccess": "Upload successful",
