rework on tests and workspace logic

--- a/packages/esm-messages-app/translations/en.json
+++ b/packages/esm-messages-app/translations/en.json
@@ -1,12 +1,12 @@
 {
   "add": "Add",
-  "after": "After 7 times",
-  "afterSevenTimes": "After 7 times",
   "cancel": "Cancel",
   "checkFilters": "Check the filters above",
   "deactivated": "DEACTIVATED",
   "defaultPatientMessagesSettings": "Default Patient messages settings",
   "edit": "Edit",
+  "endOfMessages": "After {{ endMessageValue }} times",
+  "endOfMessagesType": "After {{endOfMessageValue}} times",
   "manageMessages": "Manage Messages",
   "messages": "Messages",
   "messagesManagement": "Messages Management",
