--- a/packages/esm-sms-app/translations/en.json
+++ b/packages/esm-sms-app/translations/en.json
@@ -1,54 +1,29 @@
 {
   "add": "Add",
-  "addProvider": "Add Provider",
-  "advanced": "Advanced",
-  "automaticResponseScript": "Automatic response script (Optional)",
-  "cancel": "Cancel",
-  "chooseTemplate": "Choose a template",
+  "addProviderConfigWorkspaceTitle": "Add Provider",
   "config": "Configuration",
   "configDetails": "Configuration details",
-  "configNotSaved": "Configuration not saved",
-  "configRemoved": "Configuration removed",
-  "configSaved": "Configuration saved",
   "configuration": "Configuration",
   "configurations": "Configurations",
   "creationDate": "Creation date",
   "creator": "Creator",
   "default": "Default",
-  "deleteModalConfirmationText": "Are you sure you want to delete this configuration?",
+  "defaultConfigUpdated": "Default config updated",
   "deliveryStatus": "Delivery status",
-  "discard": "Discard",
   "edit": "Edit",
-  "editConfig": "Edit provider configuration",
+  "editConfig": "Edit {{configName}}",
   "emptyTableStateText": "There are no {{displayText}} to display",
-  "enterAutomaticScript": "Enter your script",
-  "errorDeletingConfig": "Error deleting configuration",
   "errorMakingDefault": "Failed to update default config",
   "errorMessage": "Error message",
-  "excludeLastFooter": "Exclude footer from last split message",
-  "fileContent": "File Content",
-  "fileName": "File name",
-  "fileSizeInstructions": "Drag and drop files here or click to upload",
-  "fileSizeLimitExceeded": "exceeds the size limit of",
-  "fileSizeLimitExceededText": "File size limit exceeded",
-  "fileUploadSizeConstraints": "Size limit is {{fileSize}}MB",
   "fitlerLogsByNumber": "Fitler logs by phone number",
-  "footerSplitMessage": "Footer split message",
-  "footerSplitText": "Footers split text",
-  "headerSplitMessage": "Header split message",
-  "headerSplitText": "Header split text",
   "importConfig": "Import config template",
   "logs": "Logs",
-  "maximumRetries": "Maximum retries",
   "maxRetries": "Maximum retries",
   "messageContent": "Message",
   "modificationDate": "Modification date",
   "modifiedBy": "Modified by",
-  "nameOfProvider": "Name of the provider",
-  "namePlaceHolder": "Enter provider name e.g Twilio",
   "noConfigurationsToDisplay": "No configurations to display",
   "noSmsLogsToDisplay": "No SMS Logs to display",
-  "numberOfRetries": "Number of retries",
   "openMrsId": "Openmrs ID",
   "phoneNumber": "Phone number",
   "providerId": "Provider",
@@ -57,11 +32,6 @@
   "providerStatus": "Provider status",
   "record": "Record",
   "remove": "Remove",
-  "removeConfiguration": "Remove configuration",
-  "removing": "Removing",
-  "saveAndClose": "Save and close",
-  "selectTemplate": "Select a template",
-  "sending": "Sending",
   "setDefault": "Set as default",
   "smsConfiguration": "SMS Configuration",
   "smsDirection": "SMS direction",
@@ -69,15 +39,9 @@
   "smsProviderSettings": "SMS Provider Settings",
   "splitFooter": "Footer split text",
   "splitHeader": "Header split text",
-  "successMakingDefault": "Default config updated",
-  "tabletOverlay": "Tablet overlay",
   "template": "Template",
   "templateName": "Template name",
   "test": "Test",
-  "Test": "Test",
-  "timestamp": "Timestamp",
-  "uploadConfig": "Upload config",
-  "uploadNotSuccess": "Upload unsuccessful",
-  "uploadSuccess": "Upload successful",
-  "writeYourScript": "Write your script"
+  "testConfig": "Test {{ configName }}",
+  "timestamp": "Timestamp"
 }
